# datalouna-test-task

./: mypy.ini  pyproject.toml  readme.md  run.py
data/predicts/: test_1.csv  test_2.csv  test_3.csv
notebooks/: solution.ipynb
src/data/: data_loaders.py  data_preprocessors.py  data_savers.py
