[tool.poetry]
name = "datalouna"
version = "0.1.0"
description = ""
authors = ["Ilya Isko <ilufkai2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
pandas = "^1.5.2"
tensorflow = "^2.11.0"
catboost = "^1.1.1"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
optuna = "^3.0.4"
mypy = "^0.991"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
